<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>cisc.edu</groupId>
	<artifactId>StarDustJavaFX</artifactId>
	<version>0.0.1-SNAPSHOT</version>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.0</version>
				<configuration>
					<release>12</release>
					<compilerArgs>--enable-preview</compilerArgs>
				</configuration>
			</plugin>


			<plugin>
				<groupId>org.openjfx</groupId>
				<artifactId>javafx-maven-plugin</artifactId>
				<version>0.0.2</version>
				<configuration>
					<mainClass>pkgMain.HelloFX</mainClass>
				</configuration>
			</plugin>
		</plugins>

























	</build>


	<properties>

		<!-- Generic properties -->
		<java.version>1.12</java.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

		<!-- Spring -->
		<spring-framework.version>5.1.8.RELEASE</spring-framework.version>

		<!-- Hibernate / JPA -->
		<hibernate.version>5.0.2.Final</hibernate.version>

		<!-- Logging -->
		<logback.version>1.2.3</logback.version>
		<slf4j.version>1.7.12</slf4j.version>

		<!-- Test -->
		<junit.version>4.12</junit.version>

	</properties>
    <dependencies>
    
    		<dependency>
			<groupId>cisc.udel.edu</groupId>
			<artifactId>StarDustBLL</artifactId>
			<version>0.0.1-SNAPSHOT</version>
		</dependency>
		<dependency>		
			<groupId>cisc.udel.edu</groupId>
			<artifactId>StarDustJabber</artifactId>
			<version>0.0.1-SNAPSHOT</version>
		</dependency>
		<dependency>		
			<groupId>cisc.udel.edu</groupId>
			<artifactId>StarDustServer</artifactId>
			<version>0.0.1-SNAPSHOT</version>
		</dependency>
		
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>12</version>
        </dependency>

        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-media</artifactId>
            <version>12</version>
            <classifier>win</classifier>
        </dependency>

        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-media</artifactId>
            <version>12</version>
            <classifier>mac</classifier>
        </dependency>

        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-media</artifactId>
            <version>12</version>
            <classifier>linux</classifier>
        </dependency>

        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-graphics</artifactId>
            <version>12</version>
            <classifier>win</classifier>
        </dependency>

        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-graphics</artifactId>
            <version>12</version>
            <classifier>mac</classifier>
        </dependency>

        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-graphics</artifactId>
            <version>12</version>
            <classifier>linux</classifier>
        </dependency>

        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>12</version>
        </dependency>
    </dependencies>
    


</project>